--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "motion": "^12.23.22",
+    "@sindresorhus/slugify": "^3.0.0",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
+    "lodash": "^4.17.21",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
